// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/Questionnaires should not render table whilst data is loading 1`] = `
<BaseLayout>
  <QuestionnairesPage__Center>
    <QuestionnairesPage__Title>
      Your questionnaires
    </QuestionnairesPage__Title>
    <QuestionnairesPage__StyledButtonGroup
      horizontal={true}
    >
      <withRouter(LB)
        id="btn-create-questionnaire"
        primary={true}
        to="/questionnaire/create"
      >
        Create
      </withRouter(LB)>
      <Button
        disabled={true}
        id="btn-load-questionnaire"
        secondary={true}
      >
        Upload
      </Button>
    </QuestionnairesPage__StyledButtonGroup>
    <Panel__CenteredPanel />
  </QuestionnairesPage__Center>
</BaseLayout>
`;

exports[`containers/Questionnaires should render when there are no questionnaires 1`] = `
<BaseLayout>
  <QuestionnairesPage__Center>
    <QuestionnairesPage__Title>
      Your questionnaires
    </QuestionnairesPage__Title>
    <QuestionnairesPage__StyledButtonGroup
      horizontal={true}
    >
      <withRouter(LB)
        id="btn-create-questionnaire"
        primary={true}
        to="/questionnaire/create"
      >
        Create
      </withRouter(LB)>
      <Button
        disabled={true}
        id="btn-load-questionnaire"
        secondary={true}
      >
        Upload
      </Button>
    </QuestionnairesPage__StyledButtonGroup>
    <Panel__CenteredPanel>
      <QuestionnairesTable
        onDeleteQuestionnaire={[Function]}
        questionnaires={Array []}
      />
    </Panel__CenteredPanel>
  </QuestionnairesPage__Center>
</BaseLayout>
`;

exports[`containers/Questionnaires should render when there are questionnaires 1`] = `
<BaseLayout>
  <QuestionnairesPage__Center>
    <QuestionnairesPage__Title>
      Your questionnaires
    </QuestionnairesPage__Title>
    <QuestionnairesPage__StyledButtonGroup
      horizontal={true}
    >
      <withRouter(LB)
        id="btn-create-questionnaire"
        primary={true}
        to="/questionnaire/create"
      >
        Create
      </withRouter(LB)>
      <Button
        disabled={true}
        id="btn-load-questionnaire"
        secondary={true}
      >
        Upload
      </Button>
    </QuestionnairesPage__StyledButtonGroup>
    <Panel__CenteredPanel>
      <QuestionnairesTable
        onDeleteQuestionnaire={[Function]}
        questionnaires={
          Array [
            Object {
              "actions": Object {
                "delete": true,
              },
              "comments": Object {
                "count": 0,
                "unread": false,
              },
              "createdAt": "01/01/1970",
              "id": 1,
              "sections": Array [
                Object {
                  "id": 5,
                  "pages": Array [
                    Object {
                      "id": 10,
                    },
                  ],
                },
              ],
              "theme": "default",
              "title": "Test questionnaire",
            },
          ]
        }
      />
    </Panel__CenteredPanel>
  </QuestionnairesPage__Center>
</BaseLayout>
`;
